Simplify /projects response to return only and array
"Abuse" the ContentRange header in order to indicate the total number of resources in the collection.
